# jphacks_2024_tk2432_backend

./: .env  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml
api/: crud.py  database.py  main.py  models.py  schemas.py
api/alembic/: env.py
api/alembic/versions/: 609e93cce781_.py  7f4efe620156_init.py  a7f9460d1e0d_create_item_table.py
